--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             position: relative;
         }
         .iframe-container iframe {
-            width: 150%; /* Increase this value to zoom in */
-            height: 150%; /* Increase this value to zoom in */
-            transform: scale(1.5); /* Increase this value to zoom in */
+            width: 150%; 
+            height: 150%;
+            transform: scale(1.5); 
             transform-origin: 0 0;
             border: none;
             position: absolute;
