--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .iframe-container iframe {
             width: 150%; 
             height: 150%;
-            transform: scale(1.5); 
+            /* transform: scale(1.5);  */
             transform-origin: 0 0;
             border: none;
             position: absolute;
